--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="Spotify-Clone/styles.css" />
   </head>
 
   <body>
     <nav>
       <ul>
-        <li class="brand"><img src="logo.png" alt="Spotify" />Spotify</li>
+        <li class="brand"><img src="Spotify-Clone/logo.png" alt="Spotify" />Spotify</li>
         <li>Home</li>
         <li>About</li>
       </ul>
@@ -24,7 +24,7 @@
           <div class="songItems">
             
             <img
-              src="covers/Screen Shot 2023-07-06 at 3.08.52 PM.png"
+              src="Spotify-Clone/covers/Screen Shot 2023-07-06 at 3.08.52 PM.png"
               alt="1"
             />
             <span class="songname">Diavolo Theme</span>
@@ -37,7 +37,7 @@
           </div>
           <div class="songItems">
             <img
-              src="covers/Screen Shot 2023-07-07 at 2.15.27 PM.png"
+              src="Spotify-Clone/covers/Screen Shot 2023-07-07 at 2.15.27 PM.png"
               alt="1"
             />
             <span class="songname">Akatsuki</span>
@@ -52,7 +52,7 @@
           </div>
           <div class="songItems">
             <img
-              src="covers/Screen Shot 2023-07-07 at 2.24.14 PM.png"
+              src="Spotify-Clone/covers/Screen Shot 2023-07-07 at 2.24.14 PM.png"
               alt="1"
             />
             <span class="songname">Ultra Instinct</span>
@@ -64,7 +64,7 @@
             </span>
           </div>
           <div class="songItems">
-            <img src="covers/7.jpg" alt="1" />
+            <img src="Spotify-Clone/covers/7.jpg" alt="1" />
             <span class="songname">White Tee</span>
             <span class="songlistplay"
               ><span class="timestamp">
@@ -74,7 +74,7 @@
             </span>
           </div>
           <div class="songItems">
-            <img src="covers/6.jpg" alt="1" />
+            <img src="Spotify-Clone/covers/6.jpg" alt="1" />
             <span class="songname">After Dark</span>
             <span class="songlistplay"
               ><span class="timestamp">
@@ -84,7 +84,7 @@
             </span>
           </div>
           <div class="songItems">
-            <img src="covers/5.jpg" alt="1" />
+            <img src="Spotify-Clone/covers/5.jpg" alt="1" />
             <span class="songname">Close Eyes</span>
             <span class="songlistplay"
               ><span class="timestamp">
@@ -94,7 +94,7 @@
             </span>
           </div>
           <div class="songItems">
-            <img src="covers/193.jpg" alt="1" />
+            <img src="Spotify-Clone/covers/193.jpg" alt="1" />
             <span class="songname">Patrick Bateman</span>
             <span class="songlistplay"
               ><span class="timestamp">
@@ -104,7 +104,7 @@
             </span>
           </div>
           <div class="songItems">
-            <img src="covers/3.jpg" alt="1" />
+            <img src="Spotify-Clone/covers/3.jpg" alt="1" />
             <span class="songname">Metamorphosis</span>
             <span class="songlistplay"
               ><span class="timestamp">
@@ -114,7 +114,7 @@
             </span>
           </div>
           <div class="songItems">
-            <img src="covers/2.jpg" alt="1" />
+            <img src="Spotify-Clone/covers/2.jpg" alt="1" />
             <span class="songname">Its About Drive</span>
             <span class="songlistplay"
               ><span class="timestamp">
@@ -124,7 +124,7 @@
             </span>
           </div>
           <div class="songItems">
-            <img src="covers/1.jpg" alt="1" />
+            <img src="Spotify-Clone/covers/1.jpg" alt="1" />
             <span class="songname">Rick Roll</span>
             <span class="songlistplay"
               ><span class="timestamp">
@@ -167,7 +167,7 @@
         <i class="fa-solid fa-3x fa-forward-step" id="next"></i>
       </div>
       <div class="songinfo">
-        <img src="playing.gif" width="42px" alt="" id="gif" /><span
+        <img src="Spotify-Clone/playing.gif" width="42px" alt="" id="gif" /><span
           id="masterSongName"
         >
           Diavolo Theme
@@ -178,6 +178,6 @@
       src="https://kit.fontawesome.com/98df5121b5.js"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
+    <script src="Spotify-Clone/script.js"></script>
   </body>
 </html>
